Changes in SmsReceiver, SmsApiService & MainActivity classes, Added the Preferences class for easy access to shared preferences; New resources were defined

--- a/SMSLocatorAndroid/res/values/strings.xml
+++ b/SMSLocatorAndroid/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SMSLocator</string>
+    <string name="app_name">SMS Locator</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="main_switch_upload">Upload incoming SMS</string>
 
 </resources>
